--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -31,10 +31,6 @@
 
 
     <style>
-      a{
-        text-decoration: none;
-        color:black;
-      }
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -57,65 +53,33 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
-        <!-- <a class="navbar-brand" href="#">Spring BOot Tutorial</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">홈 <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">게시판</a>
-            </li>
-          </ul>
-        </div> -->
     </nav>
       
         <div class="container">
           <h2>게시판</h2>
-          <div>총 건수 : <span th:text="${boards.totalElements}"></span></div>
-          <form class="form-inline d-flex justify-content-end" method="get" th:action="@{/board/list}">
-            <div class="form-group mx-sm-3 mb-2">
-              <input type="text" class="form-control" id="searchText" name="searchText" th:value="${param.searchText}">
+        <form accept="#" th:action="@{/board/write}" method="post" th:object="${board}">
+          <input type="hidden" th:field="*{id}">
+          <div class="form-group">
+            <label for="title">제목</label>
+            <input type="text" class="form-control"
+              th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'" name="title" id="title" th:field="*{title}">
+            <div  class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
+              제목 에러메세지
             </div>
-            <button type="submit" class="btn btn-light mb-2">검색</button>
-          </form>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">번호</th>
-                <th scope="col">제목</th>
-                <th scope="col">작성자</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr th:each="board : ${boards}">
-                <td th:text="${board.id}">번호</td>
-                <td><a th:text="${board.title}" th:href="@{/board/write(id=${board.id})}">제목</a></td>
-                <td th:text="'홍길동'">작성자</td>
-              </tr>
-            </tbody>
-          </table>
-          <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-              <li class="page-item" th:classappend="${1 == boards.pageable.pageNumber +1 } ? 'disabled'">
-                <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber - 1},searchText=${param.searchText})}">이전</a>
-              </li>
-              <li class="page-item" th:classappend="${i == boards.pageable.pageNumber +1 } ? 'disabled'" th:each=" i: ${#numbers.sequence(startPage,endPage)}">
-                <a class="page-link" href="#" th:text="${i}" th:href="@{/board/list(page=${i - 1},searchText=${param.searchText})}">1</a>
-              </li>
-              <li class="page-item" th:classappend="${boards.totalPages == boards.pageable.pageNumber +1 } ? 'disabled'">
-                <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber + 1},searchText=${param.searchText})}">다음</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="text-right">
-            <a class="btn btn-light" th:href="@{/board/write}">쓰기</a>
           </div>
-          
+          <div class="form-group">
+            <label for="content">내용</label>
+            <textarea class="form-control" name="content" rows="3" style="resize: none;" th:field="*{content}"  id="content" 
+              th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'"></textarea>
+            <div  class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
+              내용 에러메세지
+            </div>
+          </div>
+          <div class="text-right">
+            <a class="btn btn-secondary" th:href="@{/board/list}">취소</a>
+            <button type="submit" class="btn btn-primary">확인</button>
+          </div>
+        </form>
         </div>
     
 
