--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -49,7 +49,7 @@
     
         
         <!-- Custom styles for this template -->
-        <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
+        <link href="starter-template.css" th:href="@{/css/starter-template.css}" rel="stylesheet">
       </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:fragment="menu(menu)">
@@ -61,10 +61,10 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item" th:classappend="${menu} == 'home'?'active'">
-                  <a class="nav-link" href="#" th:href="@{/}">홈 <span class="sr-only" th:if="${menw} =='home'">(current)</span></a>
+                  <a class="nav-link" href="#" th:href="@{/}">홈 <span class="sr-only" th:if="${menu} =='home'">(current)</span></a>
                 </li>
                 <li class="nav-item" th:classappend="${menu} == 'board'?'active'">
-                  <a class="nav-link" href="#" th:href="@{/board/list}">게시판 <span class="sr-only" th:if="${menw} =='board'"></span></a>
+                  <a class="nav-link" href="#" th:href="@{/board/list}">게시판 <span class="sr-only" th:if="${menu} =='board'"></span></a>
                 </li>
                 <!-- <li class="nav-item">
                   <a class="nav-link disabled">Disabled</a>
