--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head th:fragment="head(title)">
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -15,7 +15,7 @@
         
     
         <!-- Bootstrap core CSS -->
-    <link href="/docs/4.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/4.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     
     
     
@@ -66,22 +66,18 @@
                 <li class="nav-item" th:classappend="${menu} == 'board'?'active'">
                   <a class="nav-link" href="#" th:href="@{/board/list}">게시판 <span class="sr-only" th:if="${menu} =='board'"></span></a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li> -->
               </ul>
-              <!-- <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-              </form> -->
+              
+                
+                <a class="btn btn-secondary my-2 my-sm-0 mx-1" type="submit" th:href="@{/account/login}"
+                  sec:authorize="!isAuthenticated()">로그인</a>
+                  <a class="btn btn-secondary my-2 my-sm-0 mx-1" type="submit" th:href="@{/account/register}"
+                  sec:authorize="!isAuthenticated()">회원가입</a>
+              <form class="form-inline my-2 my-lg-0" sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
+                <span class="text-white mx-1" sec:authentication="name">사용자</span>
+                <span class="text-white mx-1" sec:authentication="principal.authorities">권한</span>
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">로그아웃</button>
+              </form>
             </div>
         </nav>
     </body>
